# curbcam

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.picamera  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.picamera.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml
docs/plans/: 2026-05-28-curbcam-mvp-1-headless-foundation.md  2026-05-28-curbcam-mvp-1-headless-foundation.review-gemini.md  2026-05-28-curbcam-mvp-2-web.md  2026-05-29-curbcam-mvp-3-docker-install.md  2026-05-29-curbcam-picamera2-docker.md  2026-05-29-curbcam-ux-uplift.md
docs/specs/: 2026-05-28-curbcam-design.md  2026-05-28-curbcam-design.review-gemini.md  2026-05-28-curbcam-mvp-2-web.md  2026-05-29-curbcam-mvp-3-docker-install.md  2026-05-29-curbcam-picamera2-docker.md  2026-05-29-curbcam-ux-uplift.md
migrations/: env.py
migrations/versions/: a2a3378804ff_initial_schema_events_calibrations.py  ce995726050e_initial_schema_events_calibrations.py
src/curbcam/: __init__.py  cli.py
src/curbcam/camera/: __init__.py  base.py  factory.py  file_replay.py  picamera2_source.py  rtsp_source.py  usb_source.py
src/curbcam/config/: __init__.py  defaults.py  schema.py  store.py
src/curbcam/detector/: __init__.py  calibration.py  motion.py  tracker.py  types.py
src/curbcam/discovery/: __init__.py  mdns.py  net.py
src/curbcam/pipeline/: __init__.py  events.py  runner.py
src/curbcam/storage/: __init__.py  db.py  media.py  models.py  repositories.py  retention.py
src/curbcam/web/: __init__.py  app.py  auth.py  deps.py  middleware.py  settings_form.py  streams.py  supervisor.py  templating.py  units.py
src/curbcam/web/routes/: auth.py  calibration.py  crop.py  debug.py  events.py  health.py  pages.py  settings.py  setup.py  stream.py
src/curbcam/web/static/: align.js  app.css  app.js  calibrate.js
src/curbcam/web/templates/: base.html  dashboard.html  events.html  settings.html
src/curbcam/web/templates/partials/: event_card.html  events_rows.html  settings_form.html
src/curbcam/web/templates/setup/: align.html  calibrate.html  configure.html  index.html  password.html
tests/: conftest.py
tests/e2e/: conftest.py  test_calibrate_smoke.py
tests/integration/: test_cli.py  test_cli_db_upgrade.py  test_cli_serve.py  test_cli_serve_mdns.py  test_pipeline_runner.py
tests/integration/fixtures/: synthetic_run.py
tests/integration/web/: conftest.py  test_app.py  test_auth_flow.py  test_calibration.py  test_calibration_measure.py  test_crop.py  test_csv.py  test_events_history.py  test_first_run.py  test_gate.py  test_health.py  test_pages.py  test_settings_page.py  test_settings_save.py  test_streams.py  test_supervisor_tap.py  test_tokens_purge.py  test_wizard_pages.py
tests/unit/: test_cli_commands.py
tests/unit/camera/: test_factory.py  test_file_replay.py  test_picamera2_source.py  test_rtsp_source.py  test_rtsp_source_mocked.py  test_usb_source.py  test_usb_source_mocked.py
tests/unit/config/: test_schema.py  test_store.py  test_store_raw.py
tests/unit/detector/: _synthetic.py  test_calibration.py  test_motion.py  test_tracker.py  test_types.py
tests/unit/discovery/: test_mdns.py  test_net.py
tests/unit/pipeline/: test_event_bus_bounded.py  test_events.py  test_runner_extras.py  test_runner_tap.py
tests/unit/storage/: test_db.py  test_event_query.py  test_media.py  test_repositories.py  test_retention.py
tests/unit/web/: test_auth.py  test_streams_mjpeg.py  test_streams_sse.py  test_supervisor.py  test_units.py
