[project]
name = "curbcam"
version = "0.1.0.dev0"
description = "Modern, neighbor-friendly speed camera for Raspberry Pi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "structlog>=24.1",
]

[project.optional-dependencies]
picamera2 = ["picamera2>=0.3.18; sys_platform == 'linux'"]   # Raspberry Pi only
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

# [project.scripts] is intentionally deferred until src/curbcam/cli.py lands
# (Task 15 of the MVP-1 plan). Re-adding `curbcam = "curbcam.cli:app"` here
# before the module exists would create an entry-point that fails to import
# on `curbcam` invocation.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curbcam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]   # ruff format handles line length

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.uv]
# picamera2 is RPi/Linux-only.  python-prctl (a picamera2 dependency)
# has no wheels for Windows/macOS and must not be built from source on
# dev machines.  Restrict lock resolution to Windows-only so uv never
# tries to build the Linux-only picamera2 stack on this host; the RPi
# installs via `uv pip install -e ".[picamera2]"` independently.
environments = ["sys_platform == 'win32'"]
