[project]
name = "curbcam"
version = "0.1.0.dev0"
description = "Modern, neighbor-friendly speed camera for Raspberry Pi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "structlog>=24.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
picamera2 = ["picamera2>=0.3.18; sys_platform == 'linux'"]   # Raspberry Pi only
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "playwright>=1.47",
    "httpx>=0.27",
]

[project.scripts]
curbcam = "curbcam.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curbcam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic autogenerates files in its own style (trailing whitespace on the
# `Revises:` line, Union[X, None] typing, etc.) and re-offends on every
# new migration. Exclude the directory rather than fight the templates.
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]   # ruff format handles line length

[tool.ruff.lint.per-file-ignores]
"src/curbcam/cli.py" = ["B008"]   # typer.Option() in defaults is the canonical Typer pattern

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.uv]
# Enumerate the platforms the lockfile must support so uv produces a
# universal lock that works on Pi/Linux/Docker AND Windows dev machines.
# `picamera2` is gated `sys_platform == 'linux'` at the dep level so it
# is only present on Linux entries of the lock.
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

# python-prctl (transitive dep of picamera2) has no PyPI wheels and needs
# libcap-dev to build from source, which not every dev machine has. We
# don't actually need to resolve its deps to generate the lock — declare
# the metadata manually so uv can include it on Linux without invoking
# the sdist build during `uv lock` on Windows/Mac.
[[tool.uv.dependency-metadata]]
name = "python-prctl"
version = "1.8.1"
requires-dist = []

[dependency-groups]
dev = []
